# Engine_Chess3D

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  config.h.in
include/: Block.hpp  Chess3D.hpp  ChessBoard.hpp  ChessBoardLayer.hpp  ChessBoardPieceObject.hpp  ChessClient.hpp  ChessDataBaseOperations.hpp  ChessGameInterface.hpp  ChessGameOnline.hpp  ChessModel.hpp  ChessNetEventDispatcher.hpp  ChessPiece.hpp  ChessPieceObject.hpp  ChessPieces.hpp  ChessServer.hpp  ChessSession.hpp  ChessSessionOffline.hpp  ChessSessionOnline.hpp  ChessSessionServer.hpp  ChessTypes.hpp  GUIAuthorizationWindow.hpp  GUIErrorText.hpp  GUILobbiesListWindow.hpp  GUILobbyWindow.hpp  GUISettingsWindow.hpp  InterfaceLayer.hpp  NetworkTypes.hpp  Pieces.hpp  TestGameObject.hpp  TestSphere.hpp
resources/: Bishop.mtl  King.mtl  Knight.mtl  Pawn.mtl  Queen.mtl  Rook.mtl  Shaders.metal  fragment_shader.glsl  guurl.mtl  ui_vertex_shader.glsl  vertex_shader.glsl
resources/Database/: chess3d.mwb  create_lobby.sql  create_scheme.sql  create_spectator.sql  create_user.sql
source/: Block.cpp  Chess3D.cpp  ChessBoard.cpp  ChessBoardLayer.cpp  ChessBoardPieceObject.cpp  ChessClient.cpp  ChessDataBaseOperations.cpp  ChessGameOnline.cpp  ChessModel.cpp  ChessPiece.cpp  ChessPieceObject.cpp  ChessPieces.cpp  ChessServer.cpp  ChessSessionOffline.cpp  ChessSessionOnline.cpp  ChessSessionServer.cpp  GUIAuthorizationWindow.cpp  GUIErrorText.cpp  GUILobbiesListWindow.cpp  GUILobbyWindow.cpp  GUISettingsWindow.cpp  InterfaceLayer.cpp  Pieces.cpp  TestGameObject.cpp  TestSphere.cpp
